--- a/euler.cabal
+++ b/euler.cabal
@@ -17,8 +17,8 @@ library
   hs-source-dirs:      src
                      , src/wiki.haskell.org
                      , src/lib
-  exposed-modules:     MillerRabin
-                     , Euler100
+  exposed-modules:     Common
+                     , MillerRabin
   build-depends:       base >= 4.7 && < 5
                      , NumberTheory
                      , containers
@@ -33,6 +33,7 @@ library
                      , mtl
                      , fgl
                      , random
+                     , digits
   default-language:    Haskell2010
 
 test-suite euler-test
