--- a/euler.cabal
+++ b/euler.cabal
@@ -34,6 +34,7 @@ library
                      , fgl
                      , random
                      , digits
+                     , split
   default-language:    Haskell2010
 
 test-suite euler-test
