--- a/euler.cabal
+++ b/euler.cabal
@@ -20,7 +20,121 @@ library
   exposed-modules:     Common
                      , MillerRabin
                      , SpecialSubset
+                     , Euler1
+                     , WikiEuler1
+                     , Euler2
+                     , Euler3
+                     , Euler4
+                     , WikiEuler4
+                     , Euler5
+                     , Euler6
+                     , Euler7
+                     , Euler8
+                     , Euler9
+                     , Euler10
+                     , WikiEuler11
+                     , Euler12
+                     , Euler13
+                     , Euler14
+                     , WikiEuler14
+                     , Euler15
+                     , Euler16
+                     , WikiEuler17
+                     , Euler18
+                     , WikiEuler18
+                     , Euler19
+                     , Euler20
+                     , WikiEuler21
+                     , Euler22
+                     , Euler23
+                     , Euler24
+                     , Euler25
+                     , Euler26
+                     , Euler27
+                     , Euler28
+                     , Euler29
+                     , Euler30
+                     , Euler31
+                     , WikiEuler31
+                     , Euler32
+                     , Euler33
+                     , WikiEuler34
+                     , Euler35
+                     , Euler36
+                     , Euler37
+                     , Euler38
+                     , Euler39
+                     , WikiEuler40
+                     , Euler41
+                     , Euler42
+                     , Euler43
+                     , Euler44
+                     , Euler45
+                     , Euler46
+                     , Euler47
+                     , Euler48
+                     , Euler49
+                     , Euler50
+                     , Euler51
+                     , WikiEuler52
+                     , WikiEuler53
+                     , WikiEuler54
+                     , Euler55
+                     , Euler56
+                     , Euler57
+                     , Euler58
+                     , Euler59
+                     , WikiEuler59
+                     , WikiEuler60
+                     , WikiEuler61
+                     , Euler62
+                     , Euler63
+                     , Euler64
+                     , WikiEuler65
+                     , Euler66
+                     , WikiEuler67
+                     , Euler68
+                     , Euler69
+                     , Euler70
+                     , Euler71
+                     , Euler72
+                     , Euler73
+                     , Euler74
+                     , Euler75
+                     , Euler76
+                     , Euler77
+                     , WikiEuler78
+                     , Euler79
+                     , Euler80
+                     , Euler81
+                     , Euler82
+                     , Euler83
+                     , WikiEuler84
+                     , Euler85
+                     , Euler86
+                     , Euler87
+                     , Euler88
+                     , Euler89
+                     , Euler90
+                     , Euler91
+                     , Euler92
+                     , Euler93
+                     , WikiEuler93
+                     , Euler94
+                     , Euler95
+                     , Euler96
+                     , Euler97
+                     , Euler98
+                     , Euler99
+                     , Euler100
+                     , Euler101
+                     , Euler102
+                     , Euler103
                      , Euler105
+                     , Euler113
+                     , Euler191
+                     , Euler301
+                     , Euler493
   build-depends:       base >= 4.7 && < 5
                      , NumberTheory
                      , containers
