--- a/euler.cabal
+++ b/euler.cabal
@@ -130,6 +130,7 @@ library
                      , Euler101
                      , Euler102
                      , Euler103
+                     , Euler104
                      , Euler105
                      , Euler113
                      , Euler191
