--- a/euler.cabal
+++ b/euler.cabal
@@ -132,6 +132,7 @@ library
                      , Euler103
                      , Euler104
                      , Euler105
+                     , Euler106
                      , Euler113
                      , Euler191
                      , Euler301
