--- a/euler.cabal
+++ b/euler.cabal
@@ -137,6 +137,7 @@ library
                      , Euler108
                      , Euler109
                      , Euler110
+                     , Euler111
                      , Euler113
                      , Euler191
                      , Euler301
