--- a/euler.cabal
+++ b/euler.cabal
@@ -138,6 +138,7 @@ library
                      , Euler109
                      , Euler110
                      , Euler111
+                     , Euler112
                      , Euler113
                      , Euler191
                      , Euler301
