add euler 114 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -140,6 +140,7 @@ library
                      , Euler111
                      , Euler112
                      , Euler113
+                     , Euler114
                      , Euler191
                      , Euler301
                      , Euler493
