add euler 115 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -142,6 +142,7 @@ library
                      , Euler112
                      , Euler113
                      , Euler114
+                     , Euler115
                      , Euler191
                      , Euler301
                      , Euler493
