add euler 116 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -143,6 +143,7 @@ library
                      , Euler113
                      , Euler114
                      , Euler115
+                     , Euler116
                      , Euler191
                      , Euler301
                      , Euler493
