add euler 117 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -144,6 +144,7 @@ library
                      , Euler114
                      , Euler115
                      , Euler116
+                     , Euler117
                      , Euler191
                      , Euler301
                      , Euler493
