add euler 118 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -145,6 +145,7 @@ library
                      , Euler115
                      , Euler116
                      , Euler117
+                     , Euler118
                      , Euler191
                      , Euler301
                      , Euler493
