--- a/euler.cabal
+++ b/euler.cabal
@@ -146,6 +146,7 @@ library
                      , Euler116
                      , Euler117
                      , Euler118
+                     , Euler119
                      , Euler191
                      , Euler301
                      , Euler493
