--- a/euler.cabal
+++ b/euler.cabal
@@ -147,6 +147,7 @@ library
                      , Euler117
                      , Euler118
                      , Euler119
+                     , Euler120
                      , Euler191
                      , Euler301
                      , Euler493
