add euler 121 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -148,6 +148,7 @@ library
                      , Euler118
                      , Euler119
                      , Euler120
+                     , Euler121
                      , Euler191
                      , Euler301
                      , Euler493
