add euler 123 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -150,6 +150,7 @@ library
                      , Euler120
                      , Euler121
                      , Euler122
+                     , Euler123
                      , Euler191
                      , Euler301
                      , Euler493
