add euler 124 solutions

--- a/euler.cabal
+++ b/euler.cabal
@@ -151,6 +151,7 @@ library
                      , Euler121
                      , Euler122
                      , Euler123
+                     , Euler124
                      , Euler191
                      , Euler301
                      , Euler493
