add euler 125 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -152,6 +152,7 @@ library
                      , Euler122
                      , Euler123
                      , Euler124
+                     , Euler125
                      , Euler191
                      , Euler301
                      , Euler493
