--- a/euler.cabal
+++ b/euler.cabal
@@ -153,6 +153,7 @@ library
                      , Euler123
                      , Euler124
                      , Euler125
+                     , Euler127
                      , Euler191
                      , Euler301
                      , Euler493
@@ -174,6 +175,7 @@ library
                      , split
                      , Unique
                      , vector
+                     , vector-algorithms
   default-language:    Haskell2010
 
 test-suite euler-test
