--- a/euler.cabal
+++ b/euler.cabal
@@ -158,6 +158,7 @@ library
                      , Euler127
                      , Euler129
                      , Euler130
+                     , Euler132
                      , Euler191
                      , Euler301
                      , Euler493
