add euler 131 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -157,6 +157,7 @@ library
                      , Euler127
                      , Euler129
                      , Euler130
+                     , Euler131
                      , Euler132
                      , Euler133
                      , Euler191
