add euler 134 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -160,6 +160,7 @@ library
                      , Euler131
                      , Euler132
                      , Euler133
+                     , Euler134
                      , Euler191
                      , Euler301
                      , Euler493
