--- a/stack.yaml
+++ b/stack.yaml
@@ -45,6 +45,7 @@ extra-deps:
 - containers-0.5.11.0
 - extra-1.6.5
 - arithmoi-0.7.0.0
+- happy-1.19.9
 
 # Override default flag values for local packages and extra-deps
 flags: {}
