add euler 136 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -162,6 +162,7 @@ library
                      , Euler133
                      , Euler134
                      , Euler135
+                     , Euler136
                      , Euler191
                      , Euler301
                      , Euler493
