--- a/euler.cabal
+++ b/euler.cabal
@@ -163,6 +163,7 @@ library
                      , Euler134
                      , Euler135
                      , Euler136
+                     , Euler137
                      , Euler191
                      , Euler301
                      , Euler493
