add euler 138 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -164,6 +164,7 @@ library
                      , Euler135
                      , Euler136
                      , Euler137
+                     , Euler138
                      , Euler191
                      , Euler301
                      , Euler493
