--- a/euler.cabal
+++ b/euler.cabal
@@ -165,6 +165,7 @@ library
                      , Euler136
                      , Euler137
                      , Euler138
+                     , Euler139
                      , Euler145
                      , Euler191
                      , Euler301
