add euler 142 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -166,6 +166,7 @@ library
                      , Euler137
                      , Euler138
                      , Euler139
+                     , Euler142
                      , Euler145
                      , Euler191
                      , Euler301
