add euler 144 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -167,6 +167,7 @@ library
                      , Euler138
                      , Euler139
                      , Euler142
+                     , Euler144
                      , Euler145
                      , Euler191
                      , Euler301
