add euler 151 solution

--- a/euler.cabal
+++ b/euler.cabal
@@ -170,6 +170,7 @@ library
                      , Euler144
                      , Euler145
                      , Euler148
+                     , Euler151
                      , Euler191
                      , Euler301
                      , Euler493
