--- a/euler.cabal
+++ b/euler.cabal
@@ -174,6 +174,7 @@ library
                      , Euler151
                      , Euler162
                      , Euler169
+                     , Euler173
                      , WikiEuler164
                      , Euler191
                      , Euler301
